--- a/gb/21/3/20/n12823915.md
+++ b/gb/21/3/20/n12823915.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ecygkj356/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ecygkj356/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ecygkj356/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ecygkj356/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ecygkj356/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ecygkj356/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ecygkj356/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ecygkj356/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ecygkj356/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ecygkj356/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ecygkj356/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ecygkj356/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ecygkj356/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ecygkj356/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ecygkj356/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ecygkj356/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ecygkj356/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ecygkj356/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ecygkj356/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ecygkj356/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ecygkj356/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ecygkj356/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ecygkj356/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ecygkj356/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>古风：中国官灾泛滥  百姓不堪重负</h2>
 
 <h6></h6>
 <hr>
 	<p>【大纪元2021年03月20日讯】在中国，官民比例属于国家高度机密。有人说18个百姓养个官；有人说21个百姓养个官；有人说6个百姓养个官；而全国政协委员、陕西省政协副主席李冬玉在今年两会上说陕西某县是5个百姓养个官。那么，如今的中国到底多少个百姓养个官呢？</p>
 <h2>陕西某县5个百姓养个官</h2>
-<p>李冬玉在她的报告中举例说，陕西某县2019年常住人口3.02万，地方财政收入3,661万元，一般<ahref="https://github.com/ecygkj356/djy/blob/master/gb/tag/%E5%85%AC%E5%85%B1%E9%A2%84%E7%AE%97.md#1">公共预算</a>支出8.65亿元，行政事业和社会组织120余个，财政供养人员6,000余人，财政供养人员比为1:5。所谓财政供养人员，是指由国家财政来支付个人收入以及办公费用以及福利待遇的人员。在中国，财政供养人员主要由三类人员组成：第一类是党政群机关人员，主要供职于党委、人大、政府、政法机关、政协、民主党派及群众团体等机构；第二类是各类事业单位人员，供职于<ahref="https://github.com/ecygkj356/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2.md#1">教育</a>、科研、卫生等诸多领域；第三类是党政群机关和事业单位的离退休人员。</p>
+<p>李冬玉在她的报告中举例说，陕西某县2019年常住人口3.02万，地方财政收入3,661万元，一般<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%AC%E5%85%B1%E9%A2%84%E7%AE%97.md#1">公共预算</a>支出8.65亿元，行政事业和社会组织120余个，财政供养人员6,000余人，财政供养人员比为1:5。所谓财政供养人员，是指由国家财政来支付个人收入以及办公费用以及福利待遇的人员。在中国，财政供养人员主要由三类人员组成：第一类是党政群机关人员，主要供职于党委、人大、政府、政法机关、政协、民主党派及群众团体等机构；第二类是各类事业单位人员，供职于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2.md#1">教育</a>、科研、卫生等诸多领域；第三类是党政群机关和事业单位的离退休人员。</p>
 <p>事实上，李冬玉的说法并不准确，因为她所说的财政供养人员并不包括各单位聘请的临时工和网络水军。如果加上这两类人的话，就不再是5个百姓养个官了。</p>
 <h2>如今中国的官民比例大约为1:12</h2>
 <p>早在2005年，中共中央党校研究室副主任周天勇曾撰文表示：中国实际由国家财政供养的公务员和准公务员性质的人员就超过了6,000万人，当年中国的官民比例高达1:18。那么，干部与普通公务员、在编、临编人员按照1:2.5定律换算，最保守估计中国财政供养的官员总人数应为1亿。</p>
@@ -25,53 +25,53 @@
 <p>一般民主国家的行政建制是联邦（中央）政府都是下设州、县、市（相当于中国的乡镇）三级建制，有行政首长，也就是省长、州长、市长，其副职往往只有一位。市、州也只有几个专业委员会下设办公室，一个市政府的人数不会超过百人。而中国的一个市级行政中心的公职人员都在万人以上，机构更是多如牛毛。</p>
 <h2>中国行政机构繁杂重叠为世界之最</h2>
 <p>从中共现行的行政建制来看，中央下设省、市、县、乡（镇）?、村委会，比一般民主国家多出两级机构。不仅如此，中国的机构还是相互重叠，以一个市为例：一个市除了市政府以外，还有市委、市委宣传部、市纪委、市委组织部、市委统战部、市团委、市政协、市人大等非政府机构多达上百个，每个市在职的厅级官员（包括副厅级）都在60名左右，这其中市政府的厅级官员大约只占其中的十分之一，即6名左右。而非政府机构衙门的官员往往比政府衙门的人更多、权力更大，这些官员从来就不做正事，而是专门搞事，他们平时的工作要么是与政府争权；要么与百姓争利。并且每个市下设200多个县级单位，而每个县下面又设200多个科级单位。从中央到各县都设有相应的对口单位。</p>
-<h2>中国293个地级市属于<ahref="https://github.com/ecygkj356/djy/blob/master/gb/tag/%E9%9D%9E%E6%B3%95%E5%BB%BA%E5%88%B6.md#1">非法建制</a></h2>
+<h2>中国293个地级市属于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%9D%9E%E6%B3%95%E5%BB%BA%E5%88%B6.md#1">非法建制</a></h2>
 <p>按照中国宪法规定，中国行政建制为省、县、乡（镇）?，地市级机构属于非法定建制机构，行政村也不在公职建制机构之列。</p>
 <p>中共官方数字显示，目前中国大陆共有293个地级市。而每个市公务人员平均都在10,000人以上，其中每个市的在职厅官人数大约为60人；县处级官员（包括副职）?大约为1,600人；科级官员（包括副职）大约为4,000人以上；普通公务员124.8万人。如果按照293个地级市计算，中国就凭空多出了293万公务员，这其还不包括临时工。在中国各县区官员口中经常会听到这么一句话：省管县变成市管县，市管县变成了市刮县。由此可见市级建的危害有多大。</p>
-<h2>中国最大的灾难是<ahref="https://github.com/ecygkj356/djy/blob/master/gb/tag/%E5%AE%98%E7%81%BE.md#1">官灾</a></h2>
+<h2>中国最大的灾难是<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AE%98%E7%81%BE.md#1">官灾</a></h2>
 <p>中共整天都在高调宣传扶贫济困，可中国贫困的原因就是官员太多，而官员太多又导致社会腐败，使百姓不堪重负。随着中国经济的下滑，百姓的负担还会越来越重，许多原本脱贫的家庭可能又会因为失业、生病等原因导致返贫。</p>
-<p>有网友说，中共官方称全国共派出700万官员下乡扶贫，如果将这700万人的工资和开支用来解决民生，何必还要官员下乡扶贫呢？这不是多此一举？可以毫不夸张地说，中国最大的灾难既不是瘟疫，也不是天灾，而是<ahref="https://github.com/ecygkj356/djy/blob/master/gb/tag/%E5%AE%98%E7%81%BE.md#1">官灾</a>。</p>
+<p>有网友说，中共官方称全国共派出700万官员下乡扶贫，如果将这700万人的工资和开支用来解决民生，何必还要官员下乡扶贫呢？这不是多此一举？可以毫不夸张地说，中国最大的灾难既不是瘟疫，也不是天灾，而是<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AE%98%E7%81%BE.md#1">官灾</a>。</p>
 <p>责任编辑：高义</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/16/2/2/n4631190.md#1">文先忠：官员名人绝不能贪财乱色</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/16/4/7/n7531755.md#1">泛民建制促查“我爸是梁特”</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/16/4/15/n7556957.md#1">建制泛民撑财爷贬梁振英</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/16/6/2/n7955301.md#1">建制内讧九月争立会席位</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/2/2/n4631190.md#1">文先忠：官员名人绝不能贪财乱色</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/4/7/n7531755.md#1">泛民建制促查“我爸是梁特”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/4/15/n7556957.md#1">建制泛民撑财爷贬梁振英</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/6/2/n7955301.md#1">建制内讧九月争立会席位</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/25/n11070799.md#1" target="_blank">林辉：因如此荒诞理由 他们成为了“右派”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/6/n11705340.md#1" target="_blank">修炼真善忍 “巨型脑肿瘤”不治而愈</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/24/n11543039.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/2/26/n12777823.md#1">老翁用一计 让富家子败光了财产 结果感人</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/16/n12815794.md#1">【未解之谜】缅甸奇僧亲历 揭密生死轮回</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/13/n12808575.md#1">这只牛还清了3个人的债务纠纷 它是怎么做到的？</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/20/4/3/n11999735.md#1">华盛顿将军系列故事：打马少年 入画江山? ?</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/18/n12820507.md#1">【直播】美USCC听证会 聚焦投资中国风险</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/19/n12823376.md#1">车评：五倍速反应 2021 Chrysler Pacifica Hybrid Limited</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/19/n12823024.md#1">【大话西油】鲁本斯之二 路易母子反目成就一代名相</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/18/n12820432.md#1">奥斯汀回呛金与正：你要开战 今晚就奉陪</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/18/n12820494.md#1">杨洁篪带王毅访美 罕见人事安排透露什么</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/17/n12818319.md#1">拼多多成中国最大电商 董事长黄峥突辞职</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/18/n12820891.md#1">黄秋生返港完成隔离 自拍短片《EXIT》表心声</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/18/n12818821.md#1">金曲歌后詹雅雯暴瘦8公斤 确诊罹帕金森氏症</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/18/n12818723.md#1">宫胁咲良谈IZ*ONE解散哽咽 为关心他人而振作</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/17/n12818085.md#1">熊黛林双胞胎女儿 无缘与郭富城大女儿同学</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/17/n12816948.md#1">林依晨克服远距婚姻 3年没新作常“犯戏瘾”</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/18/n12819258.md#1">歌后詹雅雯患帕金森氏症暴瘦 5大症状要警惕</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/16/n12815193.md#1">3种“天然洗发水” 改善掉发、白发</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/17/n12816611.md#1">为什么美国的校车上有多条黑线？</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/17/n12816901.md#1">全球首创 3D列印社区将出现在美国加州</a></li>
-<li><a href="https://github.com/ecygkj356/djy/blob/master/gb/21/3/18/n12819164.md#1">罕见画面：在月球背面看地球缓缓升起</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ecygkj356/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ecygkj356/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/20/n12823915.htm">古风：中国官灾泛滥  百姓不堪重负</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/20/n12823915.htm">古风：中国官灾泛滥  百姓不堪重负</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ecygkj356/djy/blob/master/gb/21/3/20/n12823915.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ecygkj356/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ecygkj356/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ecygkj356/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ecygkj356/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecygkj356/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/3/20/n12823915.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
